# OutForARip

./: LICENSE  README.md  pyproject.toml
hardware/: components.md  requirements.md
ofar/: __init__.py
